# CPCommon

./: CMakeLists.txt  Doxyfile.in  README.md
src/android/: functions.c
src/common/: cpcommon.c  log.c
src/darwin/: CPCommon.c  function_map.h  functions.c
src/include/: CPCommon.h  cpcommon_error_codes.h  error_codes.h  log.h  log_definitions.h  log_functions.h  target.h  types.h
src/include/android/: function_map.h
src/include/darwin/: function_map.h
src/include/windows/: function_map.h
src/windows/: functions.c
test/: CMakeLists.txt  cpcommon_tests.i  test.py
